--- a/tools/setup_models_2.Rmd
+++ b/tools/setup_models_2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Mutation Rate Variation Pt. II"
+title: "Mutation Rate Variation Pt. II (paper 2)"
 author: "Gustavo V. Barroso"
 date: "`r Sys.Date()`"
 output:
@@ -180,18 +180,18 @@ u <- unique(lookup_tbl$u)
 num_constrained <- 1000 # number of (non-recombining) selected segment in chr
 
 # Gamma dist params
-scale_sel <- c(5e-5, 2.5e-4)
+scale_sel <- c(5e-6, 5e-5, 1e-4, 2.5e-4, 5e-4, 7.5e-4)
 shape_sel <- c(10)
 scales_mu <- c(1e-8)
-shapes_mu <- c(10, 100)
+shapes_mu <- c(1, 3, 10, 30, 100, 300)
 scales_rec <- c(1e-8)
 shapes_rec <- c(1)
 
 # Geom dist params
 avg_rec_spans <- c(1e+4)
-avg_mut_spans <- c(1e+5)
+avg_mut_spans <- c(1e+2, 1e+3, 1e+4, 1e+5, 1e+6)
 avg_neutral_lengths <- c(1e+4)
-exon_lengths <- c(1000)  
+exon_lengths <- c(200, 500, 1000, 2000)
 models <- setDT(crossing(N, num_constrained, 
                          shape_sel, scale_sel, 
                          shapes_mu, scales_mu, 
