--- a/tools/bench_1-pop.Rmd
+++ b/tools/bench_1-pop.Rmd
@@ -34,7 +34,7 @@ use_python("/usr/bin/python3")
 
 scale.4d <- function(x) sprintf("%.4f", x)
 
-knitr::opts_knit$set(root.dir="~/Devel/momentspp/benchmarking/")
+knitr::opts_knit$set(root.dir="~/Data/momentspp/paper_1/bench")
 ```
 
 This is an empty python chunk.
@@ -52,16 +52,16 @@ to assess accuracy of moments++ under strong selection (adding (1-2p)^k factors)
 
 ```{r, demes-selected, include=F, eval=T, results=F, message=F, warning=F}
 
-N <- c(10000, 15000, 20000, 25000, 30000)
+N <- c(10000, 30000, 50000)
 u <- 1e-8
-r  <- c(1e-4, 1e-5, 1e-6, 1e-7, 1e-8)
-s <- c(-1e-04, -2.5e-4, -5e-4, -1e-3)
+r  <- c(1e-4, 1e-5, 1e-6, 1e-7, 1e-8, 1e-9)
+s <- c(-1e-5, -2.5e-5, -1e-04, -2.5e-4, -1e-3, -2e-3)
 
 params <- crossing(N, u, r, s)
 params$scenario <- 1:nrow(params)
 n_models <- nrow(params)
 
-fwrite(params, "selection/single-pop/bench/params.csv")
+fwrite(params, "params.csv")
 
 Sys.setenv(num_models=n_models)
 
@@ -71,7 +71,7 @@ py$n_models <- as.integer(n_models + 1) # because python is indexed from zero
 for(i in 1:n_models) {
   
   name <- paste("model_", i, sep="")
-  sink(paste("selection/single-pop/bench/", name, ".yaml", sep=""))
+  sink(paste(name, ".yaml", sep=""))
   
   cat("time_units: generations\n")
   cat("demes:\n")
@@ -109,11 +109,9 @@ for(i in 1:n_models) {
 
 ### Running moments++
 
-```{bash run-moments++-, engine.opts='-i', include=F, eval=F}
+```{bash run-moments++-, engine.opts='-i', include=F, eval=T}
 
 source ~/.bashrc
-
-cd selection/single-pop/bench
 
 for((i=1;i<=$num_models;i++))
 do
@@ -123,10 +121,7 @@ do
   momentspp params=opt.bpp F=model_$i.yaml L=model_$i\_100 O=100;
   momentspp params=opt.bpp F=model_$i.yaml L=model_$i\_150 O=150;
   momentspp params=opt.bpp F=model_$i.yaml L=model_$i\_200 O=200;
-  momentspp params=opt.bpp F=model_$i.yaml L=model_$i\_300 O=300;
 done
-
-cd ../../..
 ```
 
 ### Running moments.TwoLocus
@@ -140,7 +135,7 @@ import sys, os
 import numpy as np
 
 for i in range(1, n_models):
-  with open(f"selection/single-pop/bench/moments_twoLocus_n40_model_{i}.csv", "w+") as fout:
+  with open(f"moments_twoLocus_n40_model_{i}.csv", "w+") as fout:
       n_samples = 40
       
       # i - 1 because python is indexed from zero
@@ -172,8 +167,8 @@ for i in range(1, n_models):
       assert np.allclose(fs_left, fs)
 
 for i in range(1, n_models):
-  with open(f"selection/single-pop/bench/moments_twoLocus_n60_model_{i}.csv", "w+") as fout:
-    n_samples = 60
+  with open(f"moments_twoLocus_n80_model_{i}.csv", "w+") as fout:
+    n_samples = 80
     
     # i - 1 because python is indexed from zero
     Ne = params["N"][i - 1] 
@@ -206,9 +201,9 @@ for i in range(1, n_models):
 
 ### Plots
 
-```{r, plots-selected-1-pop, include=T, eval=F, results=F, message=F, warning=F}
+```{r, plots-selected-1-pop, include=T, eval=T, results=F, message=F, warning=F}
 
-params <- fread("selection/single-pop/bench/params.csv")
+params <- fread("params.csv")
 
 commom_stats <- c("DD_0_0",
                   "Dr_0_0_(1-2p0)^1",
@@ -222,8 +217,8 @@ tbl <- data.frame()
 for(j in 1:length(orders)) {
   expectation <- numeric()
   for(i in 1:n_models) {
-    vals <- read.table(paste("selection/single-pop/bench/model_",
-                           i, "_", orders[j], "_expectations.txt", sep=""))
+    vals <- read.table(paste("model_",  i, "_", orders[j], 
+                             "_expectations.txt", sep=""))
     vals <- subset(vals, V1 %in% commom_stats)$V3
     expectation <- c(expectation, vals)
   }
@@ -244,17 +239,11 @@ for(j in 1:length(orders)) {
 mpp <- full_join(tbl, params, by="scenario")
 mpp$alpha <- 2 * mpp$s * mpp$N
 
-# classic BGS prediction for Hr
-params$hk95 <- 2 * params$N * params$u * 
-    (1 - (params$u * -1 * params$s) /  (2 * (-params$s + params$r)^2))
-
-# moments.TwoLocus was fitted with 2 sample sizes, n=40 and n=60
-# n == 40
+# moments.TwoLocus was fitted with 2 sample sizes, n==40 and n==80
+# n==40
 expectation <- numeric()
 for(i in 1:n_models) {
-  vals <- read.table(paste
-    ("selection/single-pop/bench/moments_twoLocus_n40_model_", i,
-      ".csv", sep=""))$V3
+  vals <- read.table(paste ("moments_twoLocus_n40_model_", i,".csv", sep=""))$V3
   expectation <- c(expectation, vals)
 }
 
@@ -265,214 +254,138 @@ tbl_py_n40$sample_size <- 40
 tbl_py_n40 <- full_join(tbl_py_n40, params, by="scenario")
 
 # from 2p(1-p) to p(1-p)
-tbl_py_n40[tbl_py_n40$stats=="Hl_0_0", 1] <- tbl_py_n40[tbl_py_n40$stats=="Hl_0_0", 1] / 2
-tbl_py_n40[tbl_py_n40$stats=="Hr_0_0", 1] <- tbl_py_n40[tbl_py_n40$stats=="Hr_0_0", 1] / 2
+tbl_py_n40[tbl_py_n40$stats=="Hl_0_0", 1] <-
+  tbl_py_n40[tbl_py_n40$stats=="Hl_0_0", 1] / 2
+tbl_py_n40[tbl_py_n40$stats=="Hr_0_0", 1] <-
+  tbl_py_n40[tbl_py_n40$stats=="Hr_0_0", 1] / 2
 
-# n == 60
+# n==80
 expectation <- numeric()
 for(i in 1:n_models) {
-  vals <- read.table(paste
-    ("selection/single-pop/bench/moments_twoLocus_n60_model_", i,
-      ".csv", sep=""))$V3
+  vals <- read.table(paste("moments_twoLocus_n80_model_", i, ".csv", sep=""))$V3
   expectation <- c(expectation, vals)
 }
 
-tbl_py_n60 <- as.data.frame(expectation)
-tbl_py_n60$stats <- commom_stats
-tbl_py_n60$scenario <- scenario
-tbl_py_n60$sample_size <- 60
-tbl_py_n60 <- full_join(tbl_py_n60, params, by="scenario")
+tbl_py_n80 <- as.data.frame(expectation)
+tbl_py_n80$stats <- commom_stats
+tbl_py_n80$scenario <- scenario
+tbl_py_n80$sample_size <- 80
+tbl_py_n80 <- full_join(tbl_py_n80, params, by="scenario")
 
 # from 2p(1-p) to p(1-p)
-tbl_py_n60[tbl_py_n60$stats=="Hl_0_0", 1] <- tbl_py_n60[tbl_py_n60$stats=="Hl_0_0", 1] / 2
-tbl_py_n60[tbl_py_n60$stats=="Hr_0_0", 1] <- tbl_py_n60[tbl_py_n60$stats=="Hr_0_0", 1] / 2
+tbl_py_n80[tbl_py_n80$stats=="Hl_0_0", 1] <-
+  tbl_py_n80[tbl_py_n80$stats=="Hl_0_0", 1] / 2
+tbl_py_n80[tbl_py_n80$stats=="Hr_0_0", 1] <-
+  tbl_py_n80[tbl_py_n80$stats=="Hr_0_0", 1] / 2
 
-tbl_py_ns <- bind_rows(tbl_py_n40, tbl_py_n60)
+tbl_py_ns <- bind_rows(tbl_py_n40, tbl_py_n80)
 
 tbl_pp <- full_join(mpp, tbl_py_ns, by=c("stats", colnames(params)))
 names(tbl_pp)[1] <- "mpp"
 names(tbl_pp)[11] <- "m2l"
 tbl_pp <- tbl_pp %>% mutate(ratio=mpp/m2l)
 
-scale.4d <- function(x) sprintf("%.4f", x) # for ajusting precision in plots
-
-p1 <- ggplot(data=filter(tbl_pp, stats==commom_stats[1], sample_size==60),
+# plots
+p1 <- ggplot(data=filter(tbl_pp, stats==commom_stats[1], sample_size==80),
         aes(x=r, y=ratio)) +
       geom_point(size=3) + geom_line() + theme_bw() + 
-  facet_grid(+alpha~order) +
-  scale_x_log10(breaks=r) + scale_y_continuous(labels=scale.4d) +
-  labs(title="Ratios mpp / m2l, rows->alpha, cols->order", x="r", y=expression(D^2)) +
+  facet_grid(+alpha~order) + scale_x_log10(breaks=r) +
+  labs(title="Ratios mpp / m2l, rows->alpha, cols->order", 
+       x="r", y=expression(D^2)) +
   geom_hline(yintercept=1, linetype="dashed", color="red") +
   theme(axis.title=element_text(size=12),
         axis.text=element_text(size=10),
         axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
         legend.position="bottom")
-save_plot("selection/single-pop/bench/dd_ratios.png", p1, base_height=24, base_width=12)
+save_plot("dd_ratios.png", p1, base_height=24, base_width=12)
 
-
-p2 <- ggplot(data=filter(tbl_pp, stats==commom_stats[2], sample_size==60),
+p2 <- ggplot(data=filter(tbl_pp, stats==commom_stats[2], sample_size==80),
         aes(x=r, y=ratio)) +
       geom_point(size=3) + geom_line() + theme_bw() + 
-  facet_grid(+alpha~order) +
-  scale_x_log10(breaks=r) + scale_y_continuous(labels=scale.4d) +
+  facet_grid(+alpha~order) + scale_x_log10(breaks=r) + 
   labs(title="Ratios mpp / m2l, rows->alpha, cols->order", x="r", y="Dz") +
   geom_hline(yintercept=1, linetype="dashed", color="red") +
   theme(axis.title=element_text(size=12),
         axis.text=element_text(size=10),
         axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
         legend.position="bottom")
-save_plot("selection/single-pop/bench/dz_ratios.png", p2, base_height=24, base_width=12)
+save_plot("dz_ratios.png", p2, base_height=24, base_width=12)
 
-p3 <- ggplot(data=filter(tbl_pp, stats==commom_stats[3], sample_size==60),
+p3 <- ggplot(data=filter(tbl_pp, stats==commom_stats[3], sample_size==80),
         aes(x=r, y=ratio)) +
       geom_point(size=3) + geom_line() + theme_bw() + 
-  facet_grid(+alpha~order) +
-  scale_x_log10(breaks=r) + scale_y_continuous(labels=scale.4d) +
-  labs(title="Ratios mpp / m2l, rows->alpha, cols->order", x="r", y=expression(H[l])) +
+  facet_grid(+alpha~order) + scale_x_log10(breaks=r) + 
+  labs(title="Ratios mpp / m2l, rows->alpha, cols->order",
+       x="r", y=expression(H[l])) +
   geom_hline(yintercept=1, linetype="dashed", color="red") +
   theme(axis.title=element_text(size=12),
         axis.text=element_text(size=10),
         axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
         legend.position="bottom")
-save_plot("selection/single-pop/bench/hl_ratios.png", p3, base_height=24, base_width=12)
+save_plot("hl_ratios.png", p3, base_height=24, base_width=12)
 
 p4 <- ggplot(data=filter(tbl_pp, stats==commom_stats[4], sample_size==60),
         aes(x=r, y=ratio)) +
       geom_point(size=3) + geom_line() + theme_bw() + 
-  facet_grid(+alpha~order) +
-  scale_x_log10(breaks=r) + scale_y_continuous(labels=scale.4d) +
-  labs(title="Ratios mpp / m2l, rows->alpha, cols->order", x="r", y=expression(H[r])) +
+  facet_grid(+alpha~order) + scale_x_log10(breaks=r) +
+  labs(title="Ratios mpp / m2l, rows->alpha, cols->order",
+       x="r", y=expression(H[r])) +
   geom_hline(yintercept=1, linetype="dashed", color="red") +
   theme(axis.title=element_text(size=12),
         axis.text=element_text(size=10),
         axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
         legend.position="bottom")
-save_plot("selection/single-pop/bench/hr_ratios.png", p4, base_height=24, base_width=12)
+save_plot("bench/hr_ratios.png", p4, base_height=24, base_width=12)
 
-p5 <- ggplot(data=filter(tbl_pp, stats==commom_stats[5], sample_size==60),
+p5 <- ggplot(data=filter(tbl_pp, stats==commom_stats[5], sample_size==80),
         aes(x=r, y=ratio)) +
-      geom_point(size=3) + geom_line() + theme_bw() + 
-  facet_grid(+alpha~order) +
-  scale_x_log10(breaks=r) + scale_y_continuous(labels=scale.4d) +
-  labs(title="Ratios mpp / m2l, rows->alpha, cols->order", x="r", y=expression(pi[2])) +
+      geom_point(size=3) + geom_line() + theme_bw() +  
+  facet_grid(+alpha~order) + scale_x_log10(breaks=r) + 
+  labs(title="Ratios mpp / m2l, rows->alpha, cols->order",
+       x="r", y=expression(pi[2])) +
   geom_hline(yintercept=1, linetype="dashed", color="red") +
   theme(axis.title=element_text(size=12),
         axis.text=element_text(size=10),
         axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
         legend.position="bottom")
-save_plot("selection/single-pop/bench/pi2_ratios.png", p5, base_height=24, base_width=12)
+save_plot("selection/single-pop/bench/pi2_ratios.png",
+          p5, base_height=24, base_width=12)
 
+# compare to HK95 pred
+tbl_hr <- filter(tbl_pp, stats=="Hr_0_0", sample_size==80)
+tbl_hr$hk95 <- 2 * tbl_hr$N * tbl_hr$u * 
+    (1 - (tbl_hr$u * -1 * tbl_hr$s) /  (2 * (-tbl_hr$s + tbl_hr$r)^2))
+molten_hr <- pivot_longer(tbl_hr, cols=c(mpp, hk95), names_to="method")
 
-# with HK95 pred
-
-# appending two-locus simulations (performed w/ twoLocusSim binary from momentspp)
-n_reps <- 30
-twoLocusSim <- numeric()
-for(i in 1:n_models) {
-  rp <- numeric()
-  for(j in 1:n_reps) {
-    vals <- read.table(paste("selection/single-pop/bench/tls_", i, "_rep_", j, ".txt", sep=""))$V3
-    rp <- c(rp, vals)
-  }
-  twoLocusSim <- c(twoLocusSim, rp)
+for(n in unique(molten_hr$N)) {
+  q <- ggplot(data=filter(molten_hr, N==n, r==1e-8), 
+              aes(x=alpha, y=value, color=method)) +
+        geom_point(size=3) + geom_line() + theme_bw() + facet_wrap(~order) +
+    scale_x_continuous(breaks=pretty_breaks()) +
+    scale_y_continuous(breaks=pretty_breaks()) +
+    labs(title=paste("Hr, N=", n, ", r=1e-8", sep=""),
+         x=expression(alpha), y=expression(H[r])) +
+    theme(axis.title=element_text(size=12),
+          axis.text=element_text(size=10),
+          axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+          legend.position="bottom")
+  q
+  save_plot(paste("Hr, N=", n, ", r=1e-8.png", sep=""), q)
 }
 
-tls <- as.data.frame(twoLocusSim)
-tls$stats <- commom_stats # not needed, output stats are in same order
-
-reps <- NULL
-for(i in 1:n_reps) { 
-  reps <- c(reps, rep(i, length(commom_stats)))
+for(a in unique(molten_hr$alpha)) {
+ r <- ggplot(data=filter(molten_hr, alpha==a), aes(x=r, y=value, color=method)) +
+      geom_point(size=3) + geom_line() + theme_bw() + facet_wrap(~order) +
+  scale_x_log10(breaks=r) + scale_y_continuous(breaks=pretty_breaks()) +
+  labs(title=paste("Hr, alpha=", a, sep=""), x="r", y=expression(H[r])) +
+  theme(axis.title=element_text(size=12),
+        axis.text=element_text(size=10),
+        axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+        legend.position="bottom")
+  r
+  save_plot(paste("Hr, alpha=", a, ".png", sep=""), r)
 }
-tls$reps <- reps
 
-scenario <- NULL
-for(i in 1:n_models) { 
-  scenario <- c(scenario, rep(i, length(commom_stats) * n_reps))
-}
-tls$scenario <- scenario
 
-df <- cbind.data.frame(mpp, tbl_py_ns$expectation)
-names(df)[1] <- "moments++"
-names(df)[9] <- "momentsTwoLocus"
-
-df_all <- full_join(df, tls, by=c("stats", "scenario")) 
-
-sd <- df_all %>% group_by(scenario, stats) %>% summarize(sd = sd(twoLocusSim))
-rep_means <- df_all %>% group_by(scenario, stats) %>% summarize(avg = mean(twoLocusSim))
-
-df_all <- full_join(df_all, rep_means, by=c("stats", "scenario")) 
-df_all <- full_join(df_all, sd, by=c("stats", "scenario")) 
-df_m <- pivot_longer(df_all, cols=c("moments++", "momentsTwoLocus", "twoLocusSim"), names_to="Method")
-
-dd <- filter(df_m, stats==commom_stats[1])
-p6 <- ggplot() + geom_errorbar(data=filter(dd, Method=="twoLocusSim"), aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
-p6 <- p6 + geom_point(data=filter(dd, Method!="twoLocusSim"), aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
-p6 <- p6 + scale_shape_manual(values=c(0, 1))
-p6 <- p6 + scale_x_log10(breaks = r) + scale_y_log10()
-p6 <- p6 + labs(x="r", y=expression(D^2))
-p6 <- p6 + scale_color_manual(values=brewer.pal(n=3, name="Dark2"))
-p6 <- p6 + theme(axis.title=element_text(size=16),
-                 axis.text=element_text(size=12),
-                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
-                 legend.position="bottom")
-p6
-save_plot("selection/single-pop/bench/moms_++_vs_py_dd.png", p6, base_height=10, base_width=20)
-
-dz <- filter(df_m, stats==commom_stats[2])
-p7 <- ggplot() + geom_errorbar(data=filter(dz, Method=="twoLocusSim"), aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
-p7 <- p7 + geom_point(data=filter(dz, Method!="twoLocusSim"), aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
-p7 <- p7 + scale_shape_manual(values=c(0, 1))
-p7 <- p7 + scale_x_log10(breaks=r) + scale_y_log10()
-p7 <- p7 + labs(x="r", y=expression(Dz))
-p7 <- p7 + scale_color_manual(values=brewer.pal(n=3, name="Dark2"))
-p7 <- p7 + theme(axis.title=element_text(size=16),
-                 axis.text=element_text(size=12),
-                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
-                 legend.position="bottom")
-p7
-save_plot("selection/single-pop/bench/moms_++_vs_py_dz.png", p7, base_height=10, base_width=20)
-
-hl <- filter(df_m, stats==commom_stats[3])
-p8 <- ggplot() + geom_errorbar(data=filter(hl, Method=="twoLocusSim"), aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
-p8 <- p8 + geom_point(data=filter(hl, Method!="twoLocusSim"), aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
-p8 <- p8 + scale_shape_manual(values=c(0, 1))
-p8 <- p8 + scale_x_log10(breaks=r) + scale_y_log10()
-p8 <- p8 + labs(x="r", y=expression(H[l]))
-p8 <- p8 + scale_color_manual(values=brewer.pal(n=3, name="Dark2"))
-p8 <- p8 + theme(axis.title=element_text(size=16),
-                 axis.text=element_text(size=12),
-                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
-                 legend.position="bottom")
-p8
-save_plot("selection/single-pop/bench/moms_++_vs_py_hl.png", p8, base_height=10, base_width=20)
-
-hr <- filter(df_m, stats==commom_stats[4])
-p9 <- ggplot() + geom_errorbar(data=filter(hr, Method=="twoLocusSim"), aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
-p9 <- p9 + geom_point(data=filter(hr, Method!="twoLocusSim"), aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
-p9 <- p9 + scale_shape_manual(values=c(0, 1))
-p9 <- p9 + scale_x_log10(breaks=r) + scale_y_log10()
-p9 <- p9 + labs(x="r", y=expression(H[r]))
-p9 <- p9 + scale_color_manual(values=brewer.pal(n=3, name="Dark2"))
-p9 <- p9 + theme(axis.title=element_text(size=16),
-                 axis.text=element_text(size=12),
-                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
-                 legend.position="bottom")
-p9
-save_plot("selection/single-pop/bench/moms_++_vs_py_hr.png", p9, base_height=10, base_width=20)
-
-pi2 <- filter(df_m, stats==commom_stats[5])
-p10 <- ggplot() + geom_errorbar(data=filter(pi2, Method=="twoLocusSim"), aes(x=r, ymax=avg + 2*sd, ymin=avg - 2*sd, color=as.factor(N))) + facet_wrap(~s, nrow=1)
-p10 <- p10 + geom_point(data=filter(pi2, Method!="twoLocusSim"), aes(x=r, y=value, color=as.factor(N), shape=Method, size=1)) + theme_bw()
-p10 <- p10 + scale_shape_manual(values=c(0, 1))
-p10 <- p10 + scale_x_log10(breaks=r) + scale_y_log10()
-p10 <- p10 + labs(x="r", y=expression(pi[2]))
-p10 <- p10 + scale_color_manual(values=brewer.pal(n=3, name="Dark2"))
-p10 <- p10 + theme(axis.title=element_text(size=16),
-                   axis.text=element_text(size=12),
-                   axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
-                   legend.position="bottom")
-p10
-save_plot("selection/single-pop/bench/moms_++_vs_py_pi2.png", p10, base_height=10, base_width=20)
 
 ```
