--- a/tools/setup_models_1.Rmd
+++ b/tools/setup_models_1.Rmd
@@ -17,7 +17,7 @@ library(tidyverse)
 library(bigsnpr) # for seq_log
 library(data.table)
 
-knitr::opts_knit$set(root.dir="~/Desktop/test_mpp_demo/")
+knitr::opts_knit$set(root.dir="~/Data/momentspp/paper_1/pilot")
 ```
 
 # Creating folders and files
@@ -29,8 +29,8 @@ assembly of whole chromosomes
 
 # in practice a two-epoch demographic model, even under equilibrium
 Na <- 10000 # ancestral N
-N1 <- c(Na, Na / 5, Na * 2) # current N
-t <- c(1000, 10000)
+N1 <- c(Na, Na / 2, Na / 5, Na / 10, 2 * Na, 5 * Na, 10 * Na) # current N
+t <- c(100, 1000, 10000) # in generations
 u <- 1e-8 # constant among exons as well as "fake" neutral u used to get B-vals
 # rounding is required so that directory names don't diverge due to precision
 lookup_r <- round(seq_log(from=1e-12, to=1e-2, length.out=500), digits=15)
@@ -54,13 +54,20 @@ fwrite(params, "params.csv", quote=F, row.names=F)
 
 ```{bash dirs, engine.opts='-i', include=F, eval=T, results=F, warning=F}
 
-# NOTE: this chunks requires that the r_* directories do not already exist
+# NOTE: this chunks requires that the directories do not already exist
 source ~/.bashrc
   
 cat r.csv | while IFS=, read -r r
 do
   mkdir r_$r
+  
+  cat s.csv | while IFS=, read -r s
+  do
+    mkdir r_$r/s_$s
+  done
 done
+
+find -mindepth 2 -type d -exec cp opt.bpp {} \;
 ```
 
 Creates files that will be used as input for moments++
@@ -71,6 +78,7 @@ Creates files that will be used as input for moments++
 for(i in 1:n_models) {
   
   if(i %% 10000 == 0) {
+    print(Sys.time())
     cat(paste(i, "\n"))
   }
   
@@ -82,7 +90,7 @@ for(i in 1:n_models) {
   s <- as.numeric(params[i,]$lookup_s)
   
   name <- paste("model_", i, sep="")
-  sink(paste("r_", r, "/", name, ".yaml", sep=""))
+  sink(paste("r_", r, "/s_", s, "/", name, ".yaml", sep=""))
   
   cat("time_units: generations\n")
   cat("demes:\n")
@@ -134,11 +142,16 @@ source ~/.bashrc
 
 for r in r_*
 do 
-  cp opt.bpp $r
+  #cp opt.bpp $r
   cd $r
-  for f in *.yaml
+  for s in s_*
   do
-	  momentspp params=opt.bpp F=$f O=25 > /dev/null
+    cd $s
+    for f in *.yaml
+    do
+	    momentspp params=opt.bpp F=$f O=200 > /dev/null
+	  done
+	  cd ..
 	done
   cd ..
 done
@@ -165,77 +178,6 @@ for(i in 1:length(lookup_r)) {
 
 params$Hr <- hr
 fwrite(params, "lookup_tbl.csv.gz", compress="gzip") # used by other scripts
-```
-
-Builds a table of models from which to build genomic landscapes (bgs_maps.R)
-and compute expected nucleotide diversity (bgs_pi.R)
-
-```{r, landscapes, include=F, eval=T, results=F, message=F, warning=F}
-
-lookup_tbl <- fread("lookup_tbl.csv.gz")
-setkey(lookup_tbl, lookup_r, lookup_s)
-
-lookup_r <- unique(lookup_tbl$lookup_r)
-lookup_s <- unique(lookup_tbl$lookup_s)
-
-# for discretizing Gamma distributions and make look-up faster
-dt_r <- data.table(lookup_r)
-dt_s <- data.table(lookup_s)
-
-setkey(dt_r, lookup_r)
-setkey(dt_s, lookup_s)
-
-# constants
-N <- unique(lookup_tbl$N)
-u <- unique(lookup_tbl$u)
-num_constrained <- 1000 # number of (non-recombining) selected segment in chr
-
-# Gamma dist params
-scale_sel <- c(5e-6, 5e-5, 1e-4, 2.5e-4, 5e-4, 7.5e-4)
-shape_sel <- c(10)
-scales_mu <- c(1e-8)
-shapes_mu <- c(1, 3, 10, 30, 100, 300)
-scales_rec <- c(1e-8)
-shapes_rec <- c(1)
-
-# Geom dist params
-avg_rec_spans <- c(1e+4)
-avg_mut_spans <- c(1e+2, 1e+3, 1e+4, 1e+5, 1e+6)
-avg_neutral_lengths <- c(1e+4)
-exon_lengths <- c(200, 500, 1000, 2000)
-models <- setDT(crossing(N, num_constrained, 
-                         shape_sel, scale_sel, 
-                         shapes_mu, scales_mu, 
-                         shapes_rec, scales_rec, 
-                         avg_rec_spans, avg_mut_spans,
-                         avg_neutral_lengths, exon_lengths))
-models$model <- 1:nrow(models)
-n_models <- nrow(models)
-
-Sys.setenv(n_models=n_models)
-fwrite(models, "models.csv")
-```
-
-```{bash folders, engine.opts='-i', include=F, eval=T, results=F, warning=F}
-
-source ~/.bashrc
-
-for((i=1;i<=n_models;i++))
-do 
-  mkdir model_$i
-done
-
-for((i=1;i<=n_models;i++))
-do
-  cd model_$i
-  
-  for((j=1;j<=5;j++))
-  do
-    mkdir rep_$j
-  done
-  
-  cd ..
-done
 ```
 
 # TODO 
