--- a/tools/Rmd/setup_models_1.Rmd
+++ b/tools/Rmd/setup_models_1.Rmd
@@ -31,9 +31,9 @@ assembly of whole chromosomes
 Na <- 10000 # ancestral N
 N1 <- c(Na / 10, 10 * Na) # current N
 t <- 50000 # in generations
-u <- 1e-8 # constant among exons as well as "fake" neutral u used to get B-vals
+u <- 1e-7 # constant among exons as well as "fake" neutral u used to get B-vals
 # rounding is required so that directory names don't diverge due to precision
-lookup_r <- round(seq(from=0.00002001, to=1e-2, length.out=300), digits=15)
+lookup_r <- c(1e-10, 1e-9, 1e-8, 1e-7, 1e-6, 1e-5) #round(seq_log(from=1e-9, to=1e-2, length.out=300), digits=15)
 lookup_s <- c(-1e-3, -5e-4, -2.5e-4, -1e-4, -5e-5, -2.5e-5, -1e-5)
 
 # for discretizing Gamma distributions
@@ -54,7 +54,7 @@ fwrite(params, "params.csv", quote=F, row.names=F)
 
 ```{bash dirs, engine.opts='-i', include=F, eval=T, results=F, warning=F}
 
-# NOTE: this chunks requires that the directories do not already exist
+# NOTE: this chunk requires that the directories do not already exist
 source ~/.bashrc
   
 cat r.csv | while IFS=, read -r r
