--- a/tools/Rmd/setup_models_1.Rmd
+++ b/tools/Rmd/setup_models_1.Rmd
@@ -17,7 +17,7 @@ library(tidyverse)
 library(bigsnpr) # for seq_log
 library(data.table)
 
-knitr::opts_knit$set(root.dir="~/Data/momentspp/paper_1/single_neutral")
+knitr::opts_knit$set(root.dir="~/Data/mpp_data/paper_1/single_neutral")
 ```
 
 # Creating folders and files
@@ -31,10 +31,10 @@ assembly of whole chromosomes
 Na <- 10000 # ancestral N
 N1 <- c(Na / 10, 10 * Na) # current N
 t <- 50000 # in generations
-u <- 1e-7 # constant among exons as well as "fake" neutral u used to get B-vals
+u <- 1e-8 # constant among exons as well as "fake" neutral u used to get B-vals
 # rounding is required so that directory names don't diverge due to precision
-lookup_r <- c(1e-10, 1e-9, 1e-8, 1e-7, 1e-6, 1e-5) #round(seq_log(from=1e-9, to=1e-2, length.out=300), digits=15)
-lookup_s <- c(-1e-3, -5e-4, -2.5e-4, -1e-4, -5e-5, -2.5e-5, -1e-5)
+lookup_r <- c(1e-9, 1e-8, 1e-7, 1e-6, 1e-5) #round(seq_log(from=1e-9, to=1e-2, length.out=300), digits=15)
+lookup_s <- c(-1e-2, -1e-3, -1e-4, -1e-5)
 
 # for discretizing Gamma distributions
 dt_r <- data.table(lookup_r)
